--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,12 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### Ignore application.yml file ###
+src/main/resources/application.yml
+
+src/dockeriser
+src/dockerizer/*
+
+
+
